# MetalCpp

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/Application/: CMakeLists.txt
src/Renderer/: CMakeLists.txt  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  ViewDelegate.cpp  ViewDelegate.h
src/Window/: Window.cpp
src/app/: main.cpp
src/application/: CMakeLists.txt  main.cpp
src/win/: CMakeLists.txt  Window.h
src/window/: AppDelegate.cpp  AppDelegate.h  CMakeLists.txt  window.cpp
